完善基础信息报送

--- a/src/main/resources/templates/base_info_show.html
+++ b/src/main/resources/templates/base_info_show.html
@@ -73,7 +73,10 @@
                                 </div>
                                 <div class="col-lg-12">
                                     <dl class="dl-horizontal">
-                                        <dt>状态:</dt> <dd><span class="label label-info">待审核</span></dd>
+                                        <dt>状态:</dt>
+                                        <dd>
+                                            <small><span class="label label-info" id="state">口口口</span> <div id="repost_div"></div></small>
+                                        </dd>
                                     </dl>
                                 </div>
                             </div>
@@ -87,7 +90,7 @@
                                 </div>
                                 <div class="col-lg-7" id="cluster_info">
                                     <dl class="dl-horizontal" >
-                                        <dt>填报时间:</dt> <dd id="submitTime"> 	2018-7-7 23:36:57 </dd>
+                                        <dt>填报时间:</dt> <dd id="submitTime"> 口口口口/口口/口口</dd>
                                     </dl>
                                 </div>
                             </div>
@@ -97,9 +100,9 @@
                                         <dt>项目提交进度:</dt>
                                         <dd>
                                             <div class="progress progress-striped active m-b-sm">
-                                                <div style="width: 50%;" class="progress-bar" id="state_bar"></div>
+                                                <div class="progress-bar" id="state_bar"></div>
                                             </div>
-                                            <small>项目提交情况： <strong id="state_msg">等待领导审批</strong> </small>
+                                            <small>项目提交情况： <strong id="state_msg"></strong> </small>
                                         </dd>
                                     </dl>
                                 </div>
