--- a/src/main/resources/templates/operation_log.html
+++ b/src/main/resources/templates/operation_log.html
@@ -4,48 +4,8 @@
       xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
 
     <link th:href="@{/css/plugins/jQueryUI/jquery-ui-1.10.4.custom.min.css}" rel="stylesheet">
-    <link th:href="@{/css/plugins/jqGrid/ui.jqgrid.css}" rel="stylesheet">
-    <style>
-        .ui-jqgrid {
-            font-size: 20px;
-        }
+    <link th:href="@{/css/plugins/dataTables/datatables.min.css}" rel="stylesheet">
 
-
-        .ui-jqgrid-view {
-            font-size: 20px;
-        }
-
-
-        .ui-jqgrid .ui-jqgrid-htable th {
-            height: 38px;
-            font-size: 16px;
-        }
-
-
-        .ui-jqgrid .ui-jqgrid-pager {
-            height: 24px;
-            font-size: 16px;
-        }
-
-
-        .ui-jqgrid .ui-pg-input {
-            font-size: 1em;
-            height: 20px;
-        }
-
-
-        .ui-jqgrid .i-pg-selbox {
-            font-size: 0.9em;
-            height: 20px;
-        }
-
-
-        .ui-jqgrid tr.ui-row-ltr td {
-            font-size: 1.4em;
-            height: 36px;
-            text-align: center;
-        }
-    </style>
     <div class="row wrapper border-bottom white-bg page-heading">
         <div class="col-sm-4">
             <h2>操作日志</h2>
@@ -59,17 +19,43 @@
             </ol>
         </div>
     </div>
-    <div class="wrapper wrapper-content  animated fadeInRight">
+    <div class="wrapper wrapper-content animated fadeInRight">
         <div class="row">
             <div class="col-lg-12">
-                <div class="ibox ">
+                <div class="ibox float-e-margins">
                     <div class="ibox-title">
-                        <h5>用户的每一个关键动作都会记录并保存于此</h5>
+                        <h5>操作日志</h5>
+                        <div class="ibox-tools">
+                            <a class="collapse-link">
+                                <i class="fa fa-chevron-up"></i>
+                            </a>
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                <i class="fa fa-wrench"></i>
+                            </a>
+                            <ul class="dropdown-menu dropdown-user">
+                                <li><a href="#">Config option 1</a>
+                                </li>
+                                <li><a href="#">Config option 2</a>
+                                </li>
+                            </ul>
+                            <a class="close-link">
+                                <i class="fa fa-times"></i>
+                            </a>
+                        </div>
                     </div>
                     <div class="ibox-content">
-                        <div class="jqGrid_wrapper">
-                            <table id="table_list_1"></table>
-                            <div id="pager_list_1"></div>
+
+                        <div class="table-responsive">
+                            <table class="table table-striped table-bordered table-hover dataTables-example" >
+                                <thead>
+                                <tr>
+                                    <th>Log ID</th>
+                                    <th>操作人员</th>
+                                    <th>事件</th>
+                                    <th>时间</th>
+                                </tr>
+                                </thead>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -83,9 +69,8 @@
 <!-- Peity -->
 <script th:src="@{/js/plugins/peity/jquery.peity.min.js}"></script>
 
-<!-- jqGrid -->
-<script th:src="@{/js/plugins/jqGrid/i18n/grid.locale-en.js}"></script>
-<script th:src="@{/js/plugins/jqGrid/jquery.jqGrid.min.js}"></script>
+<!-- dataTable -->
+<script th:src="@{/js/plugins/dataTables/datatables.min.js}"></script>
 
 <!-- Custom and plugin javascript -->
 <script th:src="@{/js/inspinia.js}"></script>
@@ -94,6 +79,5 @@
 <script th:src="@{/js/plugins/jquery-ui/jquery-ui.min.js}"></script>
 <!-- Custom and plugin javascript -->
 <script th:src="@{/js/custom/operation_log.js}"></script>
-
 
 </html>
