--- a/src/main/resources/templates/notification.html
+++ b/src/main/resources/templates/notification.html
@@ -9,11 +9,7 @@
 
     <title>通知</title>
 
-    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
-    <link th:href="@{/font-awesome/css/font-awesome.css}" rel="stylesheet">
-    <link th:href="@{/css/plugins/iCheck/custom.css}" rel="stylesheet">
-    <link th:href="@{/css/animate.css}" rel="stylesheet">
-    <link th:href="@{/css/style.css}" rel="stylesheet">
+    <link th:href="@{/css/plugins/dataTables/datatables.min.css}" rel="stylesheet">
 
 </head>
 
@@ -39,12 +35,12 @@
                     <div class="file-manager">
                         <div class="space-25"></div>
                         <h5>类型</h5>
-                        <ul class="folder-list m-b-md" style="padding: 0">
-                            <li><a href="mailbox.html"> <i class="fa fa-inbox "></i> 月报 <span class="label label-warning pull-right">16</span> </a></li>
-                            <li><a href="mailbox.html"> <i class="fa fa-envelope-o"></i> 项目概况</a></li>
-                            <li><a href="mailbox.html"> <i class="fa fa-certificate"></i> 合同备案</a></li>
-                            <li><a href="mailbox.html"> <i class="fa fa-file-text-o"></i> 招标备案 <span class="label label-danger pull-right">2</span></a></li>
-                            <li><a href="mailbox.html"> <i class="fa fa-trash-o"></i> 年度投融资计划 </a></li>
+                        <ul class="folder-list m-b-md" style="padding: 0" id="categoryUl">
+                            <li><a href="#" data-name="月报"> <i class="fa fa-inbox "></i> 月报 <span class="label label-warning pull-right">·</span> </a></li>
+                            <li><a href="#" data-name="项目基本信息"> <i class="fa fa-envelope-o"></i> 项目概况</a></li>
+                            <li><a href="#"> <i class="fa fa-certificate"></i> 合同备案</a></li>
+                            <li><a href="#"> <i class="fa fa-file-text-o"></i> 招标备案 <span class="label label-danger pull-right">·</span></a></li>
+                            <li><a href="#"> <i class="fa fa-trash-o"></i> 年度投融资计划 </a></li>
                         </ul>
                         <h5>Categories</h5>
                         <ul class="category-list" style="padding: 0">
@@ -73,205 +69,22 @@
         </div>
         <div class="col-lg-9 animated fadeInRight">
             <div class="mail-box-header">
-
-                <form method="get" action="index.html" class="pull-right mail-search">
-                    <div class="input-group">
-                        <input type="text" class="form-control input-sm" name="search" placeholder="搜索...">
-                        <div class="input-group-btn">
-                            <button type="submit" class="btn btn-sm btn-primary">
-                                搜索
-                            </button>
-                        </div>
-                    </div>
-                </form>
                 <h2>
-                    新消息通知 (10)
+                    待处理
                 </h2>
-                <div class="mail-tools tooltip-demo m-t-md">
-                    <div class="btn-group pull-right">
-                        <button class="btn btn-white btn-sm"><i class="fa fa-arrow-left"></i></button>
-                        <button class="btn btn-white btn-sm"><i class="fa fa-arrow-right"></i></button>
-                    </div>
-                    <button class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="left" title="Refresh inbox"><i class="fa fa-refresh"></i> 刷新 </button>
-
-                </div>
             </div>
             <div class="mail-box">
 
-                <table class="table table-hover table-mail">
-                    <tbody id="notification_body">
-                    <tr class="unread">
-                        <td class="check-mail">
-                            <i class="fa fa-envelope"></i>
-                        </td>
-                        <td class="mail-ontact"><a href="mail_detail.html">Anna Smith</a></td>
-                        <td class="mail-subject"><a href="mail_detail.html">Lorem ipsum dolor noretek imit set.</a></td>
-                        <td class=""><i class="fa fa-paperclip"></i></td>
-                        <td class="text-right mail-date">6.10 AM</td>
+                <table class="table table-striped table-bordered table-hover dataTables-example" >
+                    <thead>
+                    <tr>
+                        <th>Notification ID</th>
+                        <th>操作人员</th>
+                        <th>项目</th>
+                        <th>时间</th>
+                        <th>操作</th>
                     </tr>
-                    <tr class="unread">
-                        <td class="check-mail">
-                            <i class="fa fa-envelope"></i>
-                        </td>
-                        <td class="mail-ontact"><a href="mail_detail.html">Jack Nowak</a></td>
-                        <td class="mail-subject"><a href="mail_detail.html">Aldus PageMaker including versions of Lorem Ipsum.</a></td>
-                        <td class=""></td>
-                        <td class="text-right mail-date">8.22 PM</td>
-                    </tr>
-                    <tr class="read">
-                        <td class="check-mail">
-                            <i class="fa fa-envelope-open-o" aria-hidden="true"></i>
-                        </td>
-                        <td class="mail-ontact"><a href="mail_detail.html">Facebook</a> <span class="label label-warning pull-right">Clients</span> </td>
-                        <td class="mail-subject"><a href="mail_detail.html">Many desktop publishing packages and web page editors.</a></td>
-                        <td class=""></td>
-                        <td class="text-right mail-date">Jan 16</td>
-                    </tr>
-                    <tr class="read">
-                        <td class="check-mail">
-                            <i class="fa fa-envelope-open-o" aria-hidden="true"></i>
-                        </td>
-                        <td class="mail-ontact"><a href="mail_detail.html">Mailchip</a></td>
-                        <td class="mail-subject"><a href="mail_detail.html">There are many variations of passages of Lorem Ipsum.</a></td>
-                        <td class=""></td>
-                        <td class="text-right mail-date">Mar 22</td>
-                    </tr>
-                    <tr class="read">
-                        <td class="check-mail">
-                            <i class="fa fa-envelope-open-o" aria-hidden="true"></i>
-                        </td>
-                        <td class="mail-ontact"><a href="mail_detail.html">Alex T.</a> <span class="label label-danger pull-right">Documents</span></td>
-                        <td class="mail-subject"><a href="mail_detail.html">Lorem ipsum dolor noretek imit set.</a></td>
-                        <td class=""><i class="fa fa-paperclip"></i></td>
-                        <td class="text-right mail-date">December 22</td>
-                    </tr>
-                    <tr class="read">
-                        <td class="check-mail">
-                            <i class="fa fa-envelope-open-o" aria-hidden="true"></i>
-                        </td>
-                        <td class="mail-ontact"><a href="mail_detail.html">Monica Ryther</a></td>
-                        <td class="mail-subject"><a href="mail_detail.html">The standard chunk of Lorem Ipsum used.</a></td>
-                        <td class=""></td>
-                        <td class="text-right mail-date">Jun 12</td>
-                    </tr>
-                    <tr class="read">
-                        <td class="check-mail">
-                            <i class="fa fa-envelope-open-o" aria-hidden="true"></i>
-                        </td>
-                        <td class="mail-ontact"><a href="mail_detail.html">Sandra Derick</a></td>
-                        <td class="mail-subject"><a href="mail_detail.html">Contrary to popular belief.</a></td>
-                        <td class=""></td>
-                        <td class="text-right mail-date">May 28</td>
-                    </tr>
-                    <tr class="read">
-                        <td class="check-mail">
-                            <input type="checkbox" class="i-checks">
-                        </td>
-                        <td class="mail-ontact"><a href="mail_detail.html">Patrick Pertners</a> <span class="label label-info pull-right">Adv</span></td>
-                        <td class="mail-subject"><a href="mail_detail.html">If you are going to use a passage of Lorem </a></td>
-                        <td class=""></td>
-                        <td class="text-right mail-date">May 28</td>
-                    </tr>
-                    <tr class="read">
-                        <td class="check-mail">
-                            <input type="checkbox" class="i-checks">
-                        </td>
-                        <td class="mail-ontact"><a href="mail_detail.html">Michael Fox</a></td>
-                        <td class="mail-subject"><a href="mail_detail.html">Humour, or non-characteristic words etc.</a></td>
-                        <td class=""></td>
-                        <td class="text-right mail-date">Dec 9</td>
-                    </tr>
-                    <tr class="read">
-                        <td class="check-mail">
-                            <input type="checkbox" class="i-checks">
-                        </td>
-                        <td class="mail-ontact"><a href="mail_detail.html">Damien Ritz</a></td>
-                        <td class="mail-subject"><a href="mail_detail.html">Oor Lorem Ipsum is that it has a more-or-less normal.</a></td>
-                        <td class=""></td>
-                        <td class="text-right mail-date">Jun 11</td>
-                    </tr>
-                    <tr class="read">
-                        <td class="check-mail">
-                            <input type="checkbox" class="i-checks">
-                        </td>
-                        <td class="mail-ontact"><a href="mail_detail.html">Anna Smith</a></td>
-                        <td class="mail-subject"><a href="mail_detail.html">Lorem ipsum dolor noretek imit set.</a></td>
-                        <td class=""><i class="fa fa-paperclip"></i></td>
-                        <td class="text-right mail-date">6.10 AM</td>
-                    </tr>
-                    <tr class="read">
-                        <td class="check-mail">
-                            <input type="checkbox" class="i-checks">
-                        </td>
-                        <td class="mail-ontact"><a href="mail_detail.html">Jack Nowak</a></td>
-                        <td class="mail-subject"><a href="mail_detail.html">Aldus PageMaker including versions of Lorem Ipsum.</a></td>
-                        <td class=""></td>
-                        <td class="text-right mail-date">8.22 PM</td>
-                    </tr>
-                    <tr class="read">
-                        <td class="check-mail">
-                            <input type="checkbox" class="i-checks">
-                        </td>
-                        <td class="mail-ontact"><a href="mail_detail.html">Mailchip</a></td>
-                        <td class="mail-subject"><a href="mail_detail.html">There are many variations of passages of Lorem Ipsum.</a></td>
-                        <td class=""></td>
-                        <td class="text-right mail-date">Mar 22</td>
-                    </tr>
-                    <tr class="read">
-                        <td class="check-mail">
-                            <input type="checkbox" class="i-checks">
-                        </td>
-                        <td class="mail-ontact"><a href="mail_detail.html">Alex T.</a> <span class="label label-warning pull-right">Clients</span></td>
-                        <td class="mail-subject"><a href="mail_detail.html">Lorem ipsum dolor noretek imit set.</a></td>
-                        <td class=""><i class="fa fa-paperclip"></i></td>
-                        <td class="text-right mail-date">December 22</td>
-                    </tr>
-                    <tr class="read">
-                        <td class="check-mail">
-                            <input type="checkbox" class="i-checks">
-                        </td>
-                        <td class="mail-ontact"><a href="mail_detail.html">Monica Ryther</a></td>
-                        <td class="mail-subject"><a href="mail_detail.html">The standard chunk of Lorem Ipsum used.</a></td>
-                        <td class=""></td>
-                        <td class="text-right mail-date">Jun 12</td>
-                    </tr>
-                    <tr class="read">
-                        <td class="check-mail">
-                            <input type="checkbox" class="i-checks">
-                        </td>
-                        <td class="mail-ontact"><a href="mail_detail.html">Sandra Derick</a></td>
-                        <td class="mail-subject"><a href="mail_detail.html">Contrary to popular belief.</a></td>
-                        <td class=""></td>
-                        <td class="text-right mail-date">May 28</td>
-                    </tr>
-                    <tr class="read">
-                        <td class="check-mail">
-                            <input type="checkbox" class="i-checks">
-                        </td>
-                        <td class="mail-ontact"><a href="mail_detail.html">Patrick Pertners</a> </td>
-                        <td class="mail-subject"><a href="mail_detail.html">If you are going to use a passage of Lorem </a></td>
-                        <td class=""></td>
-                        <td class="text-right mail-date">May 28</td>
-                    </tr>
-                    <tr class="read">
-                        <td class="check-mail">
-                            <input type="checkbox" class="i-checks">
-                        </td>
-                        <td class="mail-ontact"><a href="mail_detail.html">Michael Fox</a></td>
-                        <td class="mail-subject"><a href="mail_detail.html">Humour, or non-characteristic words etc.</a></td>
-                        <td class=""></td>
-                        <td class="text-right mail-date">Dec 9</td>
-                    </tr>
-                    <tr class="read">
-                        <td class="check-mail">
-                            <input type="checkbox" class="i-checks">
-                        </td>
-                        <td class="mail-ontact"><a href="mail_detail.html">Damien Ritz</a></td>
-                        <td class="mail-subject"><a href="mail_detail.html">Oor Lorem Ipsum is that it has a more-or-less normal.</a></td>
-                        <td class=""></td>
-                        <td class="text-right mail-date">Jun 11</td>
-                    </tr>
-                    </tbody>
+                    </thead>
                 </table>
 
 
@@ -289,17 +102,12 @@
     <script th:src="@{/js/inspinia.js}"></script>
     <script th:src="@{/js/plugins/pace/pace.min.js}"></script>
 
+    <!-- dataTable -->
+    <script th:src="@{/js/plugins/dataTables/datatables.min.js}"></script>
     <!-- iCheck -->
     <script th:src="@{/js/plugins/iCheck/icheck.min.js}"></script>
     <script th:src="@{/js/custom/notification.js}"></script>
-    <script>
-        $(document).ready(function(){
-            $('.i-checks').iCheck({
-                checkboxClass: 'icheckbox_square-green',
-                radioClass: 'iradio_square-green',
-            });
-        });
-    </script>
+
 </body>
 
 </html>
