这里开始项目前期的开发

--- a/src/main/resources/templates/base_info_show.html
+++ b/src/main/resources/templates/base_info_show.html
@@ -9,6 +9,7 @@
 
     <link th:href="@{/css/plugins/datapicker/datepicker3.css}" rel="stylesheet">
     <link th:href="@{/css/custom/bootstrap-switch.min.css}" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/pace/1.0.2/themes/blue/pace-theme-center-atom.min.css" rel="stylesheet">
 </head>
 
 <body>
