--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1527,7 +1527,7 @@
                                         <form enctype="multipart/form-data">
                                             <div class="form-group">
                                                 <div class="file-loading">
-                                                    <input id="pre_progress_file" type="file" multiple  data-overwrite-initial="false" data-min-file-count="1">
+                                                    <input id="pre_progress_file" name="pre_progress_file" type="file" multiple  data-overwrite-initial="false" data-min-file-count="1">
                                                 </div>
                                             </div>
                                         </form>
