--- a/src/main/resources/templates/pre_progress_show.html
+++ b/src/main/resources/templates/pre_progress_show.html
@@ -133,36 +133,7 @@
                                                     </div>
                                                     <div class="ibox-content">
                                                         <div class="row">
-                                                            <div class="col-lg-12">
-                                                                <div class="file-box">
-                                                                    <div class="file">
-                                                                        <span class="corner"></span>
-                                                                        <div class="icon">
-                                                                        </div>
-                                                                        <div class="file-name">
-                                                                            Document_2014.doc
-                                                                            <br/>
-                                                                            <small>Added: Jan 11, 2014</small>
-                                                                            <button class="btn-primary pull-right">下载</button>
-                                                                        </div>
-
-                                                                    </div>
-                                                                </div>
-                                                                <div class="file-box">
-                                                                    <div class="file">
-                                                                        <span class="corner"></span>
-
-                                                                        <div class="image">
-                                                                            <img alt="image" class="" src="img/p1.jpg">
-                                                                        </div>
-                                                                        <div class="file-name">
-                                                                            Italy street.jpg
-                                                                            <br/>
-                                                                            <small>Added: Jan 6, 2014</small>
-                                                                            <button class="btn-primary pull-right">下载</button>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
+                                                            <div class="col-lg-12" id="files_display_div">
                                                             </div>
                                                         </div>
                                                     </div>
