完成项目前期

--- a/src/main/resources/templates/base_info_show.html
+++ b/src/main/resources/templates/base_info_show.html
@@ -57,7 +57,7 @@
                             </div>
                             <shiro:hasRole name="checker">
                                 <div class="col-lg-offset-8 col-lg-2" id="check_btn">
-                                    <a class="btn btn-danger btn-facebook animation_select" data-toggle="modal" data-target="#person_approve_modal">
+                                    <a class="btn btn-danger btn-facebook animation_select" data-toggle="modal" data-target="#base_info_approve_modal">
                                         审批
                                     </a>
                                 </div>
@@ -476,7 +476,7 @@
 </div>
 
 <!--审批modal-->
-<div class="modal inmodal" id="person_approve_modal" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal inmodal" id="base_info_approve_modal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content animated bounceInRight" id="base_info_check_div">
             <div class="modal-header">
