--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,6 @@
     <link th:href="@{/css/custom/enjoyhint.css}" rel="stylesheet" type="text/css">
     <!-- Toastr style -->
     <link th:href="@{/css/plugins/toastr/toastr.min.css}" rel="stylesheet">
-    <link href="https://cdn.bootcss.com/pace/1.0.2/themes/blue/pace-theme-center-atom.min.css" rel="stylesheet">
 
     <link th:href="@{/css/plugins/dataTables/datatables.min.css}" rel="stylesheet">
     <link th:href="@{/css/plugins/datapicker/datepicker3.css}" rel="stylesheet">
@@ -1025,7 +1024,22 @@
     </div>
 </div>
 
-
+<!--loading-->
+<div id="main_loading"  style="display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:#f8f8f8;opacity:0.6;z-index:1000;">
+    <div id="loading_gif" style="text-align:center;position:fixed;z-index: 9999;top:50%;left: 50%;">
+        <div class="sk-spinner sk-spinner-cube-grid">
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+        </div>
+    </div>
+</div>
 <!--水库基本信息填报modal-->
 <div class="modal fade" id="base_info_modal" data-backdrop="static" tabindex="-1" role="dialog" ria-labelledby="myModalLabel" style="max-height:95%;">
     <div class="modal-dialog modal-lg" role="document">
@@ -1567,7 +1581,6 @@
 
 <!-- Custom and plugin javascript -->
 <script th:src="@{/js/inspinia.js}"></script>
-<script th:src="@{/js/plugins/pace/pace.min.js}"></script>
 
 <!-- jQuery UI -->
 <script th:src="@{/js/plugins/jquery-ui/jquery-ui.min.js}"></script>
