--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,6 +30,7 @@
 </head>
 
 <body class="md-skin fixed-nav no-skin-config">
+
 <div id="wrapper">
     <nav class="navbar-default navbar-static-side" role="navigation">
         <div class="sidebar-collapse">
@@ -152,24 +153,10 @@
                     <shiro:hasRole name="reporter">
                         <li class="dropdown">
                             <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                                <i class="fa fa-envelope"></i> <span class="label label-warning">16</span>
+                                <i class="fa fa-envelope"></i> <span class="label label-warning" id="countFeedback"></span>
                             </a>
-                            <ul class="dropdown-menu dropdown-messages" id="feedback">
-                                <li>
-                                    <div class="dropdown-messages-box">
-                                        <a href="profile.html" class="pull-left">
-                                            <img alt="image" class="img-circle" src="img/a7.jpg">
-                                        </a>
-                                        <div>
-                                            <small class="pull-right">46h ago</small>
-                                            <strong>Mike Loreipsum</strong> started following <strong>Monica
-                                            Smith</strong>.
-                                            <br>
-                                            <small class="text-muted">3 days ago at 7:58 pm - 10.06.2014</small>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="divider"></li>
+                            <ul class="dropdown-menu dropdown-messages" id="feedback_entrance">
+
                             </ul>
                         </li>
                     </shiro:hasRole>
@@ -1024,22 +1011,7 @@
     </div>
 </div>
 
-<!--loading-->
-<div id="main_loading"  style="display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:#f8f8f8;opacity:0.6;z-index:1000;">
-    <div id="loading_gif" style="text-align:center;position:fixed;z-index: 9999;top:50%;left: 50%;">
-        <div class="sk-spinner sk-spinner-cube-grid">
-            <div class="sk-cube"></div>
-            <div class="sk-cube"></div>
-            <div class="sk-cube"></div>
-            <div class="sk-cube"></div>
-            <div class="sk-cube"></div>
-            <div class="sk-cube"></div>
-            <div class="sk-cube"></div>
-            <div class="sk-cube"></div>
-            <div class="sk-cube"></div>
-        </div>
-    </div>
-</div>
+
 <!--水库基本信息填报modal-->
 <div class="modal fade" id="base_info_modal" data-backdrop="static" tabindex="-1" role="dialog" ria-labelledby="myModalLabel" style="max-height:95%;">
     <div class="modal-dialog modal-lg" role="document">
@@ -1414,6 +1386,24 @@
     </div>
 </div>
 
+
+<!--loading-->
+<div id="main_loading"  style="display:block;position:fixed;top:0;left:0;width:100%;height:100%;background:#f8f8f8;opacity:0.6;z-index:1000;">
+    <div id="loading_gif" style="text-align:center;position:fixed;z-index: 9999;top:50%;left: 50%;">
+        <div class="sk-spinner sk-spinner-cube-grid">
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+        </div>
+    </div>
+</div>
+
 <!--个人信息modal-->
 <div class="modal fade" id="person_info_modal" data-backdrop="static" tabindex="-1" role="dialog"
      aria-labelledby="myModalLabel" style="max-height:95%;">
@@ -1560,6 +1550,22 @@
         </div>
     </div>
 </div>
+
+
+<script type="application/javascript">
+    document.onreadystatechange = completeLoading;
+    // 加载状态为complete时移除loading效果
+    function completeLoading() {
+        if (document.readyState =="complete") {
+            document.getElementById('main_loading').style.display="none";
+        }
+        else{
+            document.getElementById('main_loading').style.display="block";
+        }
+    }
+
+</script>
+
 <!-- Mainly scripts -->
 <script th:src="@{/js/jquery-3.1.1.min.js}"></script>
 <script th:src="@{/js/bootstrap.min.js}"></script>
