--- a/src/main/resources/templates/feedback.html
+++ b/src/main/resources/templates/feedback.html
@@ -80,10 +80,12 @@
                 <table class="table table-striped table-bordered table-hover dataTables-example" >
                     <thead>
                     <tr>
-                        <th>Notification ID</th>
-                        <th>操作人员</th>
-                        <th>项目</th>
+                        <th>Feedback ID</th>
+                        <th>类型</th>
+                        <th>内容</th>
+                        <th>状态</th>
                         <th>时间</th>
+                        <th>审核人</th>
                         <th>操作</th>
                     </tr>
                     </thead>
