优化了月报

--- a/src/main/resources/templates/project_monthly_report_show.html
+++ b/src/main/resources/templates/project_monthly_report_show.html
@@ -131,12 +131,12 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="tabs-container">
-                                    <ul class="nav nav-tabs">
+                                    <ul class="nav nav-tabs" id="tabbtn">
                                         <li class="active"><a data-toggle="tab" href="#tab-1"><i class="fa fa-line-chart"></i> 投资情况</a></li>
                                         <li class=""><a data-toggle="tab" href="#tab-2"> <i class="fa fa-wrench"></i>工程量情况</a></li>
                                         <li class=""><a data-toggle="tab" href="#tab-3"> <i class="fa fa-book"></i>项目情况</a></li>
                                         <li class=""><a data-toggle="tab" href="#tab-4"> <i class="fa fa-file-text"></i>附件</a></li>
-                                        <li class=""><a data-toggle="modal" id="mr_table"> <i class="fa fa-pie-chart"></i>月报表</a></li>
+
                                     </ul>
                                     <div class="tab-content">
                                         <div id="tab-1" class="tab-pane active animated fadeInUp">
