继续一丢丢优化

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1017,10 +1017,7 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <a href="index.html">
-                    <button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span>
-                    </button>
-                </a>
+                <button type="button" class="close base_info_modal_close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="myModalLabel">基本信息填报</h4>
             </div>
             <div class="modal-body">
@@ -1378,9 +1375,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <a href="index.html">
-                    <button type="button" class="btn btn-info">关闭</button>
-                </a>
+                <button class="base_info_modal_close" type="button" class="btn btn-info">关闭</button>
             </div>
         </div>
     </div>
@@ -1484,7 +1479,7 @@
     <div class="modal-dialog modal-lg" role="document" style="width:80%">
         <div class="modal-content">
             <div class="modal-header">
-                <a href="index.html"><button type="button" class="close"  aria-label="Close"><span aria-hidden="true">&times;</span></button></a>
+                <button type="button" class="close pre_progress_modal_close"  aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4>项目前期进度 <small> <i>（下列每项指标需逐项谨慎填写，部分项一经审核不可更改。）</i> </small></h4>
             </div>
             <div class="modal-body">
@@ -1544,7 +1539,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" id="pre_progress_submit" class="btn btn-info">提 交</button>
-                    <button  id="pre_progress_close" type="button" class="btn btn-info">关 闭</button>
+                    <button class="pre_progress_modal_close" type="button" class="btn btn-info">关 闭</button>
                 </div>
             </div>
         </div>
