--- a/src/main/resources/templates/project_monthly_report_show.html
+++ b/src/main/resources/templates/project_monthly_report_show.html
@@ -637,7 +637,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-info" data-dismiss="modal">关闭</button>
+                <button id="dismiss_modal" type="button" class="btn btn-info">关闭</button>
             </div>
         </div>
     </div>
