--- a/src/main/resources/templates/project_monthly_report.html
+++ b/src/main/resources/templates/project_monthly_report.html
@@ -109,6 +109,42 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="hr-line-dashed"></div>
+                            <h2>资金来源</h2>
+                            <br>
+                            <div class="row">
+                                <div class="form-group col-lg-6">
+                                    <label>中央投资(万元)</label><span style="color:red;"> *</span>
+                                    <input id="central_investment" name="central_investment" type="text" class="form-control required number" maxlength="12">
+                                </div>
+                                <div class="form-group col-lg-6">
+                                    <label>省级投资(万元)</label><span style="color:red;"> *</span>
+                                    <input id="provincial_investment" name="provincial_investment" type="text" class="form-control required number" maxlength="12">
+                                </div>
+                                <div class="form-group col-lg-6">
+                                    <label>市县投资(万元)</label><span style="color:red;"> *</span>
+                                    <input id="city_investment" name="city_investment" type="text" class="form-control required number" maxlength="12">
+                                </div>
+                            </div>
+                            <div class="hr-line-dashed"></div>
+                            <h2>资金到位</h2>
+                            <br>
+                            <div class="row">
+                                <div class="form-group col-lg-6">
+                                    <label>中央投资(万元)</label><span style="color:red;"> *</span>
+                                    <input id="central_investment_rel" name="central_investment_rel" type="text" class="form-control required number" maxlength="12">
+                                </div>
+                                <div class="form-group col-lg-6">
+                                    <label>省级投资(万元)</label><span style="color:red;"> *</span>
+                                    <input id="provincial_investment_rel" name="provincial_investment_rel" type="text" class="form-control required number" maxlength="12">
+                                </div>
+                                <div class="form-group col-lg-6">
+                                    <label>市县投资(万元)</label><span style="color:red;"> *</span>
+                                    <input id="city_investment_rel" name="city_investment_rel" type="text" class="form-control required number" maxlength="12">
+                                </div>
+                            </div>
+
+
                         </fieldset>
 
                         <h1>工程量情况</h1>
