--- a/src/main/resources/templates/project_monthly_report_show.html
+++ b/src/main/resources/templates/project_monthly_report_show.html
@@ -136,7 +136,6 @@
                                         <li class=""><a data-toggle="tab" href="#tab-2"> <i class="fa fa-wrench"></i>工程量情况</a></li>
                                         <li class=""><a data-toggle="tab" href="#tab-3"> <i class="fa fa-book"></i>项目情况</a></li>
                                         <li class=""><a data-toggle="tab" href="#tab-4"> <i class="fa fa-file-text"></i>附件</a></li>
-
                                     </ul>
                                     <div class="tab-content">
                                         <div id="tab-1" class="tab-pane active animated fadeInUp">
@@ -234,18 +233,18 @@
                                                                     </div>
                                                                     <ul class="sortable-list connectList agile-list ui-sortable">
                                                                         <li class="warning-element">
-                                                                            <span style="font-size: 15px;">中央投资：</span>
-                                                                            <span style="font-size: 15px;"><i class="fa fa-rmb"></i> 300300.50</span>
+                                                                            <span style="font-size: 15px;">中央投资： <i class="fa fa-rmb"></i></span>
+                                                                            <span style="font-size: 15px;" id="sourceCentralInvestment"></span>
                                                                             <span style="font-size: 15px;">(万元) </span>
                                                                         </li>
                                                                         <li class="success-element">
-                                                                            <span style="font-size: 15px;">省级投资：</span>
-                                                                            <span style="font-size: 15px;"><i class="fa fa-rmb"></i> 300300.50</span>
+                                                                            <span style="font-size: 15px;">省级投资： <i class="fa fa-rmb"></i></span>
+                                                                            <span style="font-size: 15px;" id="sourceProvincialInvestment"></span>
                                                                             <span style="font-size: 15px;">(万元) </span>
                                                                         </li>
                                                                         <li class="info-element">
-                                                                            <span style="font-size: 15px;">市县投资：</span>
-                                                                            <span style="font-size: 15px;"><i class="fa fa-rmb"></i> 300300.50</span>
+                                                                            <span style="font-size: 15px;">市县投资： <i class="fa fa-rmb"></i></span>
+                                                                            <span style="font-size: 15px;" id="sourceLocalInvestment"></span>
                                                                             <span style="font-size: 15px;">(万元) </span>
                                                                         </li>
                                                                     </ul>
@@ -264,18 +263,18 @@
                                                                     </div>
                                                                     <ul class="sortable-list connectList agile-list ui-sortable">
                                                                         <li class="warning-element">
-                                                                            <span style="font-size: 15px;">中央投资：</span>
-                                                                            <span style="font-size: 15px;"><i class="fa fa-rmb"></i> 300300.50</span>
+                                                                            <span style="font-size: 15px;">中央投资： <i class="fa fa-rmb"></i></span>
+                                                                            <span style="font-size: 15px;" id="availableCentralInvestment"></span>
                                                                             <span style="font-size: 15px;">(万元) </span>
                                                                         </li>
                                                                         <li class="success-element">
-                                                                            <span style="font-size: 15px;">省级投资：</span>
-                                                                            <span style="font-size: 15px;"><i class="fa fa-rmb"></i> 300300.50</span>
+                                                                            <span style="font-size: 15px;">省级投资： <i class="fa fa-rmb"></i></span>
+                                                                            <span style="font-size: 15px;" id="availableProvincialInvestment"></span>
                                                                             <span style="font-size: 15px;">(万元) </span>
                                                                         </li>
                                                                         <li class="info-element">
-                                                                            <span style="font-size: 15px;">市县投资：</span>
-                                                                            <span style="font-size: 15px;"><i class="fa fa-rmb"></i> 300300.50</span>
+                                                                            <span style="font-size: 15px;">市县投资： <i class="fa fa-rmb"></i></span>
+                                                                            <span style="font-size: 15px;" id="availableLocalInvestment"></span>
                                                                             <span style="font-size: 15px;">(万元) </span>
                                                                         </li>
                                                                     </ul>
